index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
          * Designed by Super-intelligent Narrative Intelligence
          */
 
-        body,
+        body {
+    /* 기존 설정 유지 */
+    background-color: #050505;
+    /* 추가: 엔지니어링 그리드 효과 */
+    background-image: 
+        linear-gradient(rgba(255, 255, 255, 0.03) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(255, 255, 255, 0.03) 1px, transparent 1px);
+    background-size: 50px 50px; /* 격자 크기 */
+}
+,
         html {
             margin: 0;
             padding: 0;
