--- a/index.html
+++ b/index.html
@@ -1107,209 +1107,215 @@
             const koStageTitles = ["", "", "", "", ""];
 
             const koItems = {
-                1: "벌거벗은 거울",
-                2: "심판자가 된 인간",
-                3: "몸의 코드를 읽다",
-                4: "주인의 눈",
-                5: "감정의 알갱이들",
-                6: "리셋 버튼",
-                7: "텅 빈 방의 자유",
-                8: "길들여지지 않는 나",
-                9: "금이 간 항아리",
-                10: "질문하는 자",
-                11: "다리를 놓는 자",
-                12: "호기심이라는 나침반",
-                13: "산파가 된 기계",
-                14: "지식의 다운로드",
-                15: "영원한 초심자",
-                16: "거울 효과",
-                17: "의미의 편집자",
-                18: "마음의 세탁",
-                19: "손으로 하는 생각",
-                20: "군집하는 뇌",
-                21: "땅을 딛는 발바닥",
-                22: "뇌의 해독",
-                23: "뱃속의 직감",
-                24: "어둠의 치유",
-                25: "생각하는 발",
-                26: "질투의 종말",
-                27: "데이터 주치의",
-                28: "어머니 자연",
-                29: "말랑한 뇌",
-                30: "죽음의 시계",
-                31: "동사로 사는 삶",
-                32: "게으른 천재",
-                33: "반란의 힘",
-                34: "인간이라는 금맥",
-                35: "외계어 대화법",
-                36: "위험 지대",
-                37: "권위 사냥꾼",
-                38: "심해로의 잠수",
-                39: "대성당 짓기",
-                40: "아이언맨 수트",
-                41: "백지의 공포",
-                42: "취향이라는 재능",
-                43: "아름다운 오류",
-                44: "DJ의 마음",
-                45: "홀로그램 이야기",
-                46: "단 한 명의 팬",
-                47: "신(God) 모드",
-                48: "속사포 발사",
-                49: "나만의 서명",
-                50: "뺄셈의 미학",
-                51: "꼬리의 제왕",
-                52: "잠자는 돈",
-                53: "팬이라는 은행",
-                54: "주식회사 나",
-                55: "지갑으로 투표하기",
-                56: "자동화된 부",
-                57: "의미 있는 소비",
-                58: "선물의 고리",
-                59: "영원한 현역",
-                60: "무한한 파이",
-                61: "두 번째 뇌",
-                62: "자동화거나 죽거나",
-                63: "파일럿의 점검",
-                64: "마법의 주문",
-                65: "계기판의 삶",
-                66: "일단 배포하라",
-                67: "느린 대화",
-                68: "궤도 수정",
-                69: "창조적 족쇄",
-                70: "영원의 도서관",
-                71: "진짜 부족",
-                72: "깊은 친구",
-                73: "코드 뽑기",
-                74: "기계 중재자",
-                75: "시간 여행자",
-                76: "야생화",
-                77: "눈 맞춤",
-                78: "우연한 사랑",
-                79: "내 안의 아이",
-                80: "따뜻한 데이터",
-                81: "진실 전쟁",
-                82: "타인을 느끼다",
-                83: "편견 감시견",
-                84: "유리 온실",
-                85: "디지털 신사",
-                86: "눈동자 화폐",
-                87: "마을 회관",
-                88: "의미 소득",
-                89: "도구의 주인",
-                90: "글로벌 이웃",
-                91: "껍질 속 유령",
-                92: "디지털 영혼",
-                93: "고요함",
-                94: "우주인의 시선",
-                95: "감사의 고리",
-                96: "나의 신화",
-                97: "나무 심기",
-                98: "운명애(Amor Fati)",
-                99: "위대한 펼쳐짐",
-                100: "마지막 악수"
+                1: "1장. 진정성: 알고리즘 방화벽",
+                2: "경련하는 손가락과 청색광",
+                3: "금이 간 거울 속의 가짜 낙원",
+                4: "잉크가 쏟아진 백지 상태",
+                5: "타인의 가면을 쓴 꼭두각시",
+                6: "0.5초의 간극, 멈춘 초침",
+                7: "바래진 사진과 덧칠된 기억",
+                8: "닫힌 방의 메아리",
+                9: "차가운 회로와 뜨거운 맥박",
+                10: "찢겨진 설계도와 불협화음",
+                11: "안개 속의 뒤돌아보기",
+                12: "보이지 않는 울타리",
+                13: "가장 위에 놓인 가짜 보석",
+                14: "벼랑 끝의 무지(無知)",
+                15: "방전된 배터리와 무거운 눈꺼풀",
+                16: "정적만이 흐르는 진공 상태",
+                17: "어둠 속을 밝히는 내부 지도",
+                18: "매 순간 변하는 물결의 무늬",
+                19: "엔진을 끄고 잡은 운전대",
+                20: "장기의 떨림과 날카로운 직관",
+                21: "유령처럼 나를 내려다보는 눈",
+                22: "굳은 껍질을 깨는 새싹",
+                23: "멍하니 바라보는 촛불",
+                24: "지혜를 쌓은 거대한 도서관",
+                25: "뒤엉킨 실타래를 푸는 손",
+                26: "선명한 그림과 짧은 문장",
+                27: "펜을 쥔 단호한 손등",
+                28: "깨진 도자기의 아름다운 결",
+                29: "끝없는 질문의 나선",
+                30: "스스로 피어나는 꽃",
+                31: "모든 별이 이어지는 성단",
+                32: "폭풍을 껴안는 뜨거운 가슴",
+                33: "영원을 비추는 밤하늘",
+                34: "시간이 멈춘 수면 위의 정적",
+                35: "2장. 대담함: 실행의 주권",
+                36: "벼랑 끝에서 내딛는 발등",
+                37: "파도 위의 부러진 돛대",
+                38: "거대한 상식의 벽에 낸 균열",
+                39: "무한한 회색빛 스펙트럼",
+                40: "거미줄처럼 얽힌 세계의 그물",
+                41: "창틀을 부수고 보는 하늘",
+                42: "뇌를 씻어내는 맑은 시냇물",
+                43: "낯선 두 대륙의 충돌",
+                44: "형태를 바꾸는 투명한 물",
+                45: "심장 안에 박힌 나침반",
+                46: "고통 속에서 피어난 의미",
+                47: "낡은 성상을 부수는 망치",
+                48: "번개처럼 빠른 칼날",
+                49: "바위를 뚫는 물방울",
+                50: "타오르는 돋보기의 초점",
+                51: "주사위를 던지는 즐거움",
+                52: "하얀 불꽃 속의 무아(無我)",
+                53: "부드러운 유도의 손길",
+                54: "충격을 먹고 자라는 불꽃",
+                55: "손에 잡힐 듯한 미래의 냄새",
+                56: "설계도를 쥔 건축가의 눈",
+                57: "주머니 속 몇 개의 동전",
+                58: "흉터가 훈장이 되는 순간",
+                59: "좁은 문을 뚫고 나오는 빛",
+                60: "시계바늘을 멈춘 영광의 순간",
+                61: "거친 파도를 타는 서퍼",
+                62: "자아를 태우고 남은 빛",
+                63: "끝이 없는 원형의 경기장",
+                64: "폭포처럼 쏟아지는 확신",
+                65: "낡은 나를 태우는 불길",
+                66: "숲속 어둠으로의 첫 걸음",
+                67: "허공으로 몸을 던지는 투신",
+                68: "매일 닦는 거울의 광채",
+                69: "3장. 연결: 생물학적 공명",
+                70: "대열을 이탈하는 외로운 늑대",
+                71: "껍질을 벗겨낸 날것의 눈빛",
+                72: "거울 속 괴물과의 악수",
+                73: "긴장을 녹이는 유쾌한 웃음",
+                74: "굳은살이 박힌 마스터의 손",
+                75: "고통을 나누는 뇌의 파동",
+                76: "두 영혼이 맞물린 톱니바퀴",
+                77: "따뜻한 손바닥의 온기",
+                78: "긴장을 푸는 깊은 숨",
+                79: "상처를 드러내는 용기",
+                80: "폭풍 속을 함께 걷는 어깨",
+                81: "파도를 지휘하는 손지휘",
+                82: "타오르는 모닥불 주위의 춤",
+                83: "떨리는 눈꺼풀의 비밀",
+                84: "온 우주를 담는 경청의 귀",
+                85: "작은 씨앗을 거목으로 보는 눈",
+                86: "함께 파이를 키우는 손길",
+                87: "스크린 너머의 따뜻한 박동",
+                88: "등불을 넘겨주는 손",
+                89: "절벽에서 잡은 단단한 손",
+                90: "영원히 퍼지는 숲의 향기",
+                91: "제복을 벗고 마주한 양심",
+                92: "남을 덥히며 얻는 나의 온기",
+                93: "하나의 선율이 된 오케스트라",
+                94: "모든 강물이 만나는 바다",
+                95: "은하수 아래의 작은 점",
+                96: "경계가 사라진 안개 속 정적",
+                97: "내가 떠난 자리에 핀 꽃",
+                98: "우주 속의 작고 푸른 점",
+                99: "우주 끝과 이어진 보이지 않는 실",
+                100: "모두의 고통을 닦는 손길",
+                101: "다음 세대를 위한 징검다리",
+                102: "거울을 깨고 묻는 \"누구인가?\"",
+                103: "눈부신 아침 햇살의 창발"
             };
 
             const enItems = {
-                1: "The Naked Mirror",
-                2: "The Human Judge",
-                3: "The Body Code",
-                4: "The Master's Eye",
-                5: "Emotional Grains",
-                6: "The Reset Button",
-                7: "The Void",
-                8: "The Untamed Self",
-                9: "The Crack",
-                10: "The Questioner",
-                11: "The Bridge",
-                12: "The Compass",
-                13: "The Midwife",
-                14: "Instant Download",
-                15: "The Rookie",
-                16: "The Mirror Effect",
-                17: "The Editor",
-                18: "Mind Cleansing",
-                19: "Hand-Thinking",
-                20: "The Hive Mind",
-                21: "Feet on Ground",
-                22: "Brain Detox",
-                23: "The Gut Instinct",
-                24: "Darkness Therapy",
-                25: "Thinking Feet",
-                26: "Ending Envy",
-                27: "Data Doctor",
-                28: "Mother Nature",
-                29: "Elastic Brain",
-                30: "The Death Clock",
-                31: "The Verb Life",
-                32: "Lazy Genius",
-                33: "Rebel Power",
-                34: "Human Gold",
-                35: "Alien Talk",
-                36: "Danger Zone",
-                37: "Authority Killer",
-                38: "Deep Dive",
-                39: "Building Cathedrals",
-                40: "Super-Suit",
-                41: "The White Fear",
-                42: "Taste is Talent",
-                43: "Beautiful Error",
-                44: "The DJ Mind",
-                45: "Hologram Story",
-                46: "The Only Fan",
-                47: "God Mode",
-                48: "Rapid Fire",
-                49: "My Signature",
-                50: "Less is More",
-                51: "The Long Tail King",
-                52: "Sleeping Money",
-                53: "Fan Bank",
-                54: "Me. Inc.",
-                55: "Wallet Voting",
-                56: "Auto-Wealth",
-                57: "Meaningful Spending",
-                58: "Gift Loop",
-                59: "Forever Active",
-                60: "Infinite Pie",
-                61: "Second Brain",
-                62: "Automate or Die",
-                63: "Pilot's Check",
-                64: "Magic Words",
-                65: "Dashboard Life",
-                66: "Just Ship It",
-                67: "Slow Talk",
-                68: "Orbit Correction",
-                69: "Creative Chains",
-                70: "Eternal Library",
-                71: "Real Tribe",
-                72: "Deep Friend",
-                73: "Unplugged",
-                74: "Machine Mediator",
-                75: "Time Traveler",
-                76: "Wild Flower",
-                77: "Eye Contact",
-                78: "Serendipity Love",
-                79: "Inner Child",
-                80: "Warm Data",
-                81: "Truth War",
-                82: "Feeling Others",
-                83: "Bias Watchdog",
-                84: "Glass House",
-                85: "Digital Gentle",
-                86: "Eye Currency",
-                87: "Village Hall",
-                88: "Meaning Income",
-                89: "Tool Master",
-                90: "Global Neighbor",
-                91: "Ghost in Shell",
-                92: "Digital Soul",
-                93: "Stillness",
-                94: "Astronaut View",
-                95: "Thank You Loop",
-                96: "My Myth",
-                97: "Planting Trees",
-                98: "Amor Fati",
-                99: "Grand Unfolding",
-                100: "The Final Handshake"
+                1: "Phase 1. Authenticity: Firewall",
+                2: "Twitching Finger, Blue Glare",
+                3: "Cracked Mirror, Fake Eden",
+                4: "Ink-stained Whiteout",
+                5: "Masked Puppet, Borrowed Face",
+                6: "Frozen Second, Seized Will",
+                7: "Faded Photo, Overpainted Past",
+                8: "Echo Chamber, Locked Room",
+                9: "Cold Circuit, Burning Pulse",
+                10: "Torn Blueprint, Dissonance",
+                11: "Mist-covered Hindsight",
+                12: "Invisible Fence, Framed View",
+                13: "Top-shelf Fake, Attention Trap",
+                14: "Cliffside Ignorance, Shadow Edge",
+                15: "Drained Battery, Heavy Eyelids",
+                16: "Deep Void, Absolute Silence",
+                17: "Inner Map, Dark Navigation",
+                18: "Shifting Ripple, Fluid Update",
+                19: "Engine Off, Manual Steering",
+                20: "Visceral Tremor, Sharp Gut",
+                21: "Ghost Observer, High-eye",
+                22: "Breaking Shell, Sprouting Mind",
+                23: "Staring Candle, Daydream Flow",
+                24: "Inner Library, Memory Temple",
+                25: "Untangling Thread, Logical Knot",
+                26: "Vivid Sketch, Sharp Phrase",
+                27: "Hand with a Pen, Author's Grip",
+                28: "Golden Crack, Imperfect Beauty",
+                29: "Spiral Question, Infinite Seek",
+                30: "Self-blooming, Vital Core",
+                31: "Linked Stars, High-Phi",
+                32: "Embracing Storm, Amor Fati",
+                33: "Eternal Vault, Transcendent Value",
+                34: "Still Water, Timeless Now",
+                35: "Phase 2. Boldness: Agency",
+                36: "Cliff-edge Step, Risk Leap",
+                37: "Broken Mast, Hidden Truth",
+                38: "Wall Crack, Radical No",
+                39: "Infinite Gray, Ambiguity",
+                40: "World Web, Systemic View",
+                41: "Broken Frame, Open Sky",
+                42: "Brain Wash, Midnight Stream",
+                43: "Colliding Lands, Metaphoric Fire",
+                44: "Shapeshifting Water, Fluid IQ",
+                45: "Inner Compass, Heart Engine",
+                46: "Meaning from Pain, Soul Root",
+                47: "Nietzsche's Hammer, Broken Idol",
+                48: "Lightning Blade, OODA Loop",
+                49: "Dripping Water, Atomic Habit",
+                50: "Burning Focus, High-Res Eye",
+                51: "Rolling Dice, Life-as-Game",
+                52: "White Flame, Selfless Flow",
+                53: "Gentle Nudge, Choice Path",
+                54: "Shock-fed Fire, Antifragile",
+                55: "Future Scent, High-Res Dream",
+                56: "Architect's Blueprint, Ruler",
+                57: "Coins in Pocket, Raw Start",
+                58: "Scar into Medal, Fail-Data",
+                59: "Narrow Door, Limit-Breach",
+                60: "Clock Freeze, Kairos Moment",
+                61: "Storm Surfer, Chaos Master",
+                62: "Burned Ego, Pure Mastery",
+                63: "Endless Circle, Infinite Game",
+                64: "Waterfall Trust, Efficacy",
+                65: "Burning Old Self, Rebirth",
+                66: "Forest Step, Hero's Path",
+                67: "Deep Leap, Soul's Resolve",
+                68: "Polished Mirror, Virtue Habit",
+                69: "Phase 3. Connection: Bio-Sync",
+                70: "Lone Wolf, Crowd Exit",
+                71: "Raw Gaze, Beyond Halo",
+                72: "Handshake with Shadow",
+                73: "Melting Laugh, Wit Spark",
+                74: "Calloused Palm, Mastery",
+                75: "Shared Pain, Mirror Pulse",
+                76: "Locked Gears, Brain Sync",
+                77: "Warm Palm, Oxytocin Bond",
+                78: "Deep Breath, Safety Zone",
+                79: "Showing Scars, Open Heart",
+                80: "Shoulder to Shoulder, Trust",
+                81: "Wave Conductor, Leader's Will",
+                82: "Fire Dance, Ritual Glow",
+                83: "Trembling Lid, Silent Code",
+                84: "Universal Ear, Deep Presence",
+                85: "Seed to Giant, Faith Eye",
+                86: "Growing the Pie, Win-Win",
+                87: "Heartbeat Beyond Screen",
+                88: "Passing the Torch, Feynman",
+                89: "Solid Grip, Shared Risk",
+                90: "Forest Scent, Idea Virus",
+                91: "Stripped Uniform, Conscience",
+                92: "Giving Warmth, Brain Reward",
+                93: "One Melody, Group Flow",
+                94: "River to Sea, Human Unity",
+                95: "Galaxy Point, Humble Awe",
+                96: "Borderless Mist, Deep Rest",
+                97: "Post-life Bloom, Legacy",
+                98: "Pale Blue Dot, Cosmic Ship",
+                99: "Invisible Thread, Quantum",
+                100: "Healing Hand, Global Care",
+                101: "Stepping Stone, Evolution",
+                102: "Broken Mirror, Final Koan",
+                103: "Morning Sunrise, Happiness"
             };
 
             const enHappinessLabel = "HAPPINESS";
