--- a/index.html
+++ b/index.html
@@ -558,10 +558,9 @@
 </g>
 
 <g id="stage-1" transform="translate(0, 700)">
-<g class="sequence-item left-side" data-index="1" data-y="50">
-<line x1="500" x2="450" y1="50" y2="50"></line>
-<circle cx="500" cy="50" r="4"></circle>
-<text class="font-sans text-item-bold" text-anchor="end" x="440" y="58"><tspan dy="0" x="440">Shattering the Algorithmic</tspan><tspan dy="1.2em" x="440">Illusion to Reclaim the Throne</tspan></text>
+<g class="sequence-item center-side" data-index="1" data-y="50">
+<circle cx="500" cy="50" r="5"></circle>
+<text class="font-sans text-item-bold" text-anchor="middle" x="500" y="58">Phase 1. Authenticity: Firewall</text>
 </g>
 <g class="sequence-item right-side" data-index="2" data-y="150">
 <line x1="500" x2="550" y1="150" y2="150"></line>
@@ -729,10 +728,9 @@
 <circle cx="500" cy="1250" r="3"></circle>
 <text class="font-sans text-item" text-anchor="start" x="560" y="1258">Automating the Mundane</text>
 </g>
-<g class="sequence-item left-side" data-index="35" data-y="1350">
-<line x1="500" x2="450" y1="1350" y2="1350"></line>
-<circle cx="500" cy="1350" r="3"></circle>
-<text class="font-sans text-item" text-anchor="end" x="440" y="1358">The Engine of Execution</text>
+<g class="sequence-item center-side" data-index="35" data-y="1350">
+<circle cx="500" cy="1350" r="5"></circle>
+<text class="font-sans text-item-bold" text-anchor="middle" x="500" y="1358">Phase 2. Boldness: Agency</text>
 </g>
 <g class="sequence-item right-side" data-index="36" data-y="1450">
 <line x1="500" x2="550" y1="1450" y2="1450"></line>
@@ -901,10 +899,9 @@
 <circle cx="500" cy="450" r="3"></circle>
 <text class="font-sans text-item" text-anchor="start" x="560" y="458">Transcending IQ</text>
 </g>
-<g class="sequence-item left-side" data-index="69" data-y="550">
-<line x1="500" x2="450" y1="550" y2="550"></line>
-<circle cx="500" cy="550" r="4"></circle>
-<text class="font-sans text-item-bold" text-anchor="end" x="440" y="558">The Courage to Discard</text>
+<g class="sequence-item center-side" data-index="69" data-y="550">
+<circle cx="500" cy="550" r="5"></circle>
+<text class="font-sans text-item-bold" text-anchor="middle" x="500" y="558">Phase 3. Connection: Bio-Sync</text>
 </g>
 <g class="sequence-item right-side" data-index="70" data-y="650">
 <line x1="500" x2="550" y1="650" y2="650"></line>
