--- a/index.html
+++ b/index.html
@@ -1098,209 +1098,209 @@
             const koStageTitles = ["", "", "", "", ""];
 
             const koItems = {
-                1: "벌거벗은 거울",
-                2: "심판자가 된 인간",
-                3: "몸의 코드를 읽다",
-                4: "주인의 눈",
-                5: "감정의 알갱이들",
-                6: "리셋 버튼",
-                7: "텅 빈 방의 자유",
-                8: "길들여지지 않는 나",
-                9: "금이 간 항아리",
-                10: "질문하는 자",
-                11: "다리를 놓는 자",
-                12: "호기심이라는 나침반",
-                13: "산파가 된 기계",
-                14: "지식의 다운로드",
-                15: "영원한 초심자",
-                16: "거울 효과",
-                17: "의미의 편집자",
-                18: "마음의 세탁",
-                19: "손으로 하는 생각",
-                20: "군집하는 뇌",
-                21: "땅을 딛는 발바닥",
-                22: "뇌의 해독",
-                23: "뱃속의 직감",
-                24: "어둠의 치유",
-                25: "생각하는 발",
-                26: "질투의 종말",
-                27: "데이터 주치의",
-                28: "어머니 자연",
-                29: "말랑한 뇌",
-                30: "죽음의 시계",
-                31: "동사로 사는 삶",
-                32: "게으른 천재",
-                33: "반란의 힘",
-                34: "인간이라는 금맥",
-                35: "외계어 대화법",
-                36: "위험 지대",
-                37: "권위 사냥꾼",
-                38: "심해로의 잠수",
-                39: "대성당 짓기",
-                40: "아이언맨 수트",
-                41: "백지의 공포",
-                42: "취향이라는 재능",
-                43: "아름다운 오류",
-                44: "DJ의 마음",
-                45: "홀로그램 이야기",
-                46: "단 한 명의 팬",
-                47: "신(God) 모드",
-                48: "속사포 발사",
-                49: "나만의 서명",
-                50: "뺄셈의 미학",
-                51: "꼬리의 제왕",
-                52: "잠자는 돈",
-                53: "팬이라는 은행",
-                54: "주식회사 나",
-                55: "지갑으로 투표하기",
-                56: "자동화된 부",
-                57: "의미 있는 소비",
-                58: "선물의 고리",
-                59: "영원한 현역",
-                60: "무한한 파이",
-                61: "두 번째 뇌",
-                62: "자동화거나 죽거나",
-                63: "파일럿의 점검",
-                64: "마법의 주문",
-                65: "계기판의 삶",
-                66: "일단 배포하라",
-                67: "느린 대화",
-                68: "궤도 수정",
-                69: "창조적 족쇄",
-                70: "영원의 도서관",
-                71: "진짜 부족",
-                72: "깊은 친구",
-                73: "코드 뽑기",
-                74: "기계 중재자",
-                75: "시간 여행자",
-                76: "야생화",
-                77: "눈 맞춤",
-                78: "우연한 사랑",
-                79: "내 안의 아이",
-                80: "따뜻한 데이터",
-                81: "진실 전쟁",
-                82: "타인을 느끼다",
-                83: "편견 감시견",
-                84: "유리 온실",
-                85: "디지털 신사",
-                86: "눈동자 화폐",
-                87: "마을 회관",
-                88: "의미 소득",
-                89: "도구의 주인",
-                90: "글로벌 이웃",
-                91: "껍질 속 유령",
-                92: "디지털 영혼",
-                93: "고요함",
-                94: "우주인의 시선",
-                95: "감사의 고리",
-                96: "나의 신화",
-                97: "나무 심기",
-                98: "운명애(Amor Fati)",
-                99: "위대한 펼쳐짐",
-                100: "마지막 악수"
+                1: "도파민 감옥 (The Dopamine Cage)",
+                2: "에고의 왜곡 (The Ego Distortion)",
+                3: "인지 과부하",
+                4: "승인 중독",
+                5: "마이크로 모먼트 (The Micro-Moment)",
+                6: "기억 재구성",
+                7: "필터 버블 제로 (Filter Bubble Zero)",
+                8: "디지털 휴머니즘 (Digital Humanism)",
+                9: "인지 부조화",
+                10: "사후 확신 편향",
+                11: "프레임의 감옥 (The Frame Trap)",
+                12: "주의력 자본",
+                13: "더닝-크루거 피크 (The Dunning-Kruger Peak)",
+                14: "시스템 셧다운 (System Shutdown)",
+                15: "딥 사일런스 (Deep Silence Strategy)",
+                16: "내면의 나침반",
+                17: "유동적 지능",
+                18: "의도적 멈춤",
+                19: "거트 인텔리전스 (Gut Intelligence)",
+                20: "메타인지 (Metacognition)",
+                21: "그로스 마인드셋 (Growth Mindset)",
+                22: "플로우 상태 (Flow State)",
+                23: "세컨드 브레인 (The Second Brain)",
+                24: "시스템 사고 (Systems Thinking)",
+                25: "에센셜리즘 (Essentialism)",
+                26: "저자 주권",
+                27: "킨츠기 철학 (The Kintsugi Philosophy)",
+                28: "와이 루프 (The Why Loop)",
+                29: "오토텔릭 (Autotelic Personality)",
+                30: "연결 지성",
+                31: "아모르 파티 (Amor Fati)",
+                32: "초월적 가치",
+                33: "파워 오브 나우 (The Power of Now)",
+                34: "계산된 리스크 (Calculated Risk)",
+                35: "피벗 (The Pivot)",
+                36: "룰 브레이커 (Rule Breaker)",
+                37: "모호함 내성",
+                38: "나비 효과 (The Butterfly Effect)",
+                39: "아웃 오브 박스 (Thinking Outside the Box)",
+                40: "인지 해독",
+                41: "메디치 효과 (The Medici Effect)",
+                42: "적응 유연성",
+                43: "핵심 가치",
+                44: "외상 후 성장",
+                45: "아이콘 파괴 (Iconoclasm)",
+                46: "초속 결정",
+                47: "복리 효과",
+                48: "딥 워크 (Deep Work)",
+                49: "확률적 사고",
+                50: "더 존 (The Zone)",
+                51: "넛지 (Nudge)",
+                52: "안티프래질 (Antifragile)",
+                53: "비전 시각화 (Vision Visualization)",
+                54: "라이프 디자인 (Designing Your Life)",
+                55: "린 스타트업 (The Lean Startup)",
+                56: "실패 자산화",
+                57: "티핑 포인트 (The Tipping Point)",
+                58: "카이로스 (Kairos Moment)",
+                59: "카오스 서핑 (Surfing the Chaos)",
+                60: "마스터리 (Mastery)",
+                61: "인피니트 게임 (The Infinite Game)",
+                62: "자기 효능감",
+                63: "파괴적 혁신",
+                64: "영웅의 여정",
+                65: "퀀텀 리프 (Quantum Leap)",
+                66: "리추얼의 힘 (The Power of Ritual)",
+                67: "고독의 힘",
+                68: "래디컬 캔더 (Radical Candor)",
+                69: "그림자 통합",
+                70: "유머 지능 (Humor Intelligence)",
+                71: "1만 시간의 법칙",
+                72: "거울 뉴런 (Mirror Neurons)",
+                73: "케미스트리 (Creative Chemistry)",
+                74: "하이 터치 (High Touch)",
+                75: "심리적 안전감",
+                76: "취약성의 힘",
+                77: "신뢰 자본",
+                78: "서번트 리더십 (Servant Leadership)",
+                79: "부족 본능",
+                80: "비언어적 지능",
+                81: "액티브 리스닝 (Active Listening)",
+                82: "피그말리온 효과 (Pygmalion Effect)",
+                83: "넌제로섬 게임 (Non-Zero-Sum Game)",
+                84: "디지털 공감 (Digital Empathy)",
+                85: "지식의 전수",
+                86: "사회적 안전망",
+                87: "아이디어 바이러스 (Idea Virus)",
+                88: "도덕적 나침반",
+                89: "헬퍼스 하이 (Helper's High)",
+                90: "집단 지성",
+                91: "다양성과 포용",
+                92: "지적 겸손",
+                93: "원니스 (Oneness)",
+                94: "레거시 (Legacy)",
+                95: "창백한 푸른 점 (Pale Blue Dot)",
+                96: "양자 얽힘 (Quantum Entanglement)",
+                97: "보편적 자비",
+                98: "지속 가능성",
+                99: "에고의 종말 (The End of Ego)",
+                100: "데이 원 정신 (Day One Mentality)"
             };
 
             const enItems = {
-                1: "The Naked Mirror",
-                2: "The Human Judge",
-                3: "The Body Code",
-                4: "The Master's Eye",
-                5: "Emotional Grains",
-                6: "The Reset Button",
-                7: "The Void",
-                8: "The Untamed Self",
-                9: "The Crack",
-                10: "The Questioner",
-                11: "The Bridge",
-                12: "The Compass",
-                13: "The Midwife",
-                14: "Instant Download",
-                15: "The Rookie",
-                16: "The Mirror Effect",
-                17: "The Editor",
-                18: "Mind Cleansing",
-                19: "Hand-Thinking",
-                20: "The Hive Mind",
-                21: "Feet on Ground",
-                22: "Brain Detox",
-                23: "The Gut Instinct",
-                24: "Darkness Therapy",
-                25: "Thinking Feet",
-                26: "Ending Envy",
-                27: "Data Doctor",
-                28: "Mother Nature",
-                29: "Elastic Brain",
-                30: "The Death Clock",
-                31: "The Verb Life",
-                32: "Lazy Genius",
-                33: "Rebel Power",
-                34: "Human Gold",
-                35: "Alien Talk",
-                36: "Danger Zone",
-                37: "Authority Killer",
-                38: "Deep Dive",
-                39: "Building Cathedrals",
-                40: "Super-Suit",
-                41: "The White Fear",
-                42: "Taste is Talent",
-                43: "Beautiful Error",
-                44: "The DJ Mind",
-                45: "Hologram Story",
-                46: "The Only Fan",
-                47: "God Mode",
-                48: "Rapid Fire",
-                49: "My Signature",
-                50: "Less is More",
-                51: "The Long Tail King",
-                52: "Sleeping Money",
-                53: "Fan Bank",
-                54: "Me. Inc.",
-                55: "Wallet Voting",
-                56: "Auto-Wealth",
-                57: "Meaningful Spending",
-                58: "Gift Loop",
-                59: "Forever Active",
-                60: "Infinite Pie",
-                61: "Second Brain",
-                62: "Automate or Die",
-                63: "Pilot's Check",
-                64: "Magic Words",
-                65: "Dashboard Life",
-                66: "Just Ship It",
-                67: "Slow Talk",
-                68: "Orbit Correction",
-                69: "Creative Chains",
-                70: "Eternal Library",
-                71: "Real Tribe",
-                72: "Deep Friend",
-                73: "Unplugged",
-                74: "Machine Mediator",
-                75: "Time Traveler",
-                76: "Wild Flower",
-                77: "Eye Contact",
-                78: "Serendipity Love",
-                79: "Inner Child",
-                80: "Warm Data",
-                81: "Truth War",
-                82: "Feeling Others",
-                83: "Bias Watchdog",
-                84: "Glass House",
-                85: "Digital Gentle",
-                86: "Eye Currency",
-                87: "Village Hall",
-                88: "Meaning Income",
-                89: "Tool Master",
-                90: "Global Neighbor",
-                91: "Ghost in Shell",
-                92: "Digital Soul",
-                93: "Stillness",
-                94: "Astronaut View",
-                95: "Thank You Loop",
-                96: "My Myth",
-                97: "Planting Trees",
-                98: "Amor Fati",
-                99: "Grand Unfolding",
-                100: "The Final Handshake"
+                1: "The Dopamine Cage",
+                2: "The Ego Distortion",
+                3: "Cognitive Overload",
+                4: "Validation Addiction",
+                5: "The Micro-Moment",
+                6: "Memory Reconstruction",
+                7: "Filter Bubble Zero",
+                8: "Digital Humanism",
+                9: "Cognitive Dissonance",
+                10: "Hindsight Bias",
+                11: "The Frame Trap",
+                12: "Attention Capital",
+                13: "The Dunning-Kruger Peak",
+                14: "System Shutdown",
+                15: "Deep Silence Strategy",
+                16: "Inner Compass",
+                17: "Fluid Intelligence",
+                18: "Intentional Pausing",
+                19: "Gut Intelligence",
+                20: "Metacognition",
+                21: "Growth Mindset",
+                22: "Flow State",
+                23: "The Second Brain",
+                24: "Systems Thinking",
+                25: "Essentialism",
+                26: "Authorial Sovereignty",
+                27: "The Kintsugi Philosophy",
+                28: "The Why Loop",
+                29: "Autotelic Personality",
+                30: "Connective Intelligence",
+                31: "Amor Fati",
+                32: "Transcendent Value",
+                33: "The Power of Now",
+                34: "Calculated Risk",
+                35: "The Pivot",
+                36: "Rule Breaker",
+                37: "Tolerance for Ambiguity",
+                38: "The Butterfly Effect",
+                39: "Thinking Outside the Box",
+                40: "Cognitive Detox",
+                41: "The Medici Effect",
+                42: "Adaptive Flexibility",
+                43: "Core Values",
+                44: "Post-Traumatic Growth",
+                45: "Iconoclasm",
+                46: "Velocity Decisioning",
+                47: "The Compound Effect",
+                48: "Deep Work",
+                49: "Probabilistic Thinking",
+                50: "The Zone",
+                51: "Nudge",
+                52: "Antifragile",
+                53: "Vision Visualization",
+                54: "Designing Your Life",
+                55: "The Lean Startup",
+                56: "Failure as Asset",
+                57: "The Tipping Point",
+                58: "Kairos Moment",
+                59: "Surfing the Chaos",
+                60: "Mastery",
+                61: "The Infinite Game",
+                62: "Self-Efficacy",
+                63: "Disruptive Innovation",
+                64: "The Hero's Journey",
+                65: "Quantum Leap",
+                66: "The Power of Ritual",
+                67: "Solitude Power",
+                68: "Radical Candor",
+                69: "Integrating the Shadow",
+                70: "Humor Intelligence",
+                71: "10,000 Hours Rule",
+                72: "Mirror Neurons",
+                73: "Creative Chemistry",
+                74: "High Touch",
+                75: "Psychological Safety",
+                76: "Power of Vulnerability",
+                77: "Trust Capital",
+                78: "Servant Leadership",
+                79: "Tribal Instinct",
+                80: "Nonverbal Intelligence",
+                81: "Active Listening",
+                82: "Pygmalion Effect",
+                83: "Non-Zero-Sum Game",
+                84: "Digital Empathy",
+                85: "Passing the Torch",
+                86: "Social Safety Net",
+                87: "Idea Virus",
+                88: "Moral Compass",
+                89: "Helper's High",
+                90: "Collective Intelligence",
+                91: "D&I",
+                92: "Intellectual Humility",
+                93: "Oneness",
+                94: "Legacy",
+                95: "Pale Blue Dot",
+                96: "Quantum Entanglement",
+                97: "Universal Compassion",
+                98: "Sustainability",
+                99: "The End of Ego",
+                100: "Day One Mentality"
             };
 
             const enHappinessLabel = "HAPPINESS";
